@@ -29,6 +29,7 @@ Version 1.0.xxxx (April xxth 2014)
 - Implemented: web traffic reduced when refreshing widgets
 - Changed: RFXMeter values for Water/Gas now displays with 3 digits
 - Fixed: openzwave dimable lights did not restore to last brightness level when turned on
+- Implemented: openzwave added support for Vision Battery Operated Siren (ZM1601EU)
 
 Version 1.0.1680 (April 21th 2014)
 - Implemented: Support for Forecast.io
